# audio2text

./: .gitignore  PIPELINE.md  README.md  config.yaml  converter.py  diarizer.py  gui.py  llm_rating.md  logger.py  main.py  plan.md  processor.py  pyproject.toml  recorder.py  requirements.txt  setup_audio.py  speaker_db.py  summariser.py  transcriber.py
